Rework query vector, add cosineSimilarity, rm iterator, adjust yaml skip, lazy allocate BinaryDenseVector.vector array